--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf8">
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
@@ -11,9 +12,13 @@
             <p>GitHub</p>
             <p>Qiita</p>
             <p>Twitter</p>
+            <button id="button1">push</button>
+            <button id="button2">push</button>
         </div>
         <footer>
             <p>2022 Daichi Tanaka</p>
         </footer>
     </body>
+    <script src="./index.js">
+    </script>
 </html>
